Some basic setups for this app: + BaseActivity : initToolbar, fetchLayoutID, fetchTheme + DrawerLayout: initDrawerLayout, initNavigationview; + AndroidManifest: add permissions, delete app theme, MainActivty launchMode: singleTop, delete supportRTL + Styles: DrawerTheme, BaseToolbarStyle

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,23 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+    </style>
+
+    <style name="DrawerTheme" parent="AppTheme">
+        <item name="android:windowTranslucentStatus" tools:targetApi="kitkat">true</item>
+    </style>
+
+    <style name="BaseToolbarStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:theme">@style/Base.Theme.AppCompat</item>
+        <item name="android:elevation" tools:targetApi="lollipop">8dp</item>
     </style>
 
 </resources>
